[package]
name = "kvs"
version = "0.1.0"
authors = ["Blessing Pariola <blessing@pario.la>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
failure = "0.1.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.16.0"
walkdir = "2.5.0"
